--- a/farm/index.html
+++ b/farm/index.html
@@ -8,21 +8,21 @@
     <meta name="author" content="Wisdom Ojimah">
     <title>Modern Farm | Home</title>
 
-    <link rel="icon" href="/assets/img/logo.png">
+    <link rel="icon" href="assets/img/logo.png">
 
     <!-- Preload Styles -->
-    <link rel="preload" href="/assets/css/main.css" as="style">
-    <link rel="preload" href="/assets/css/style.css" as="style">
-    <link rel="preload" href="/assets/css/preloader.css" as="style">
-    <link rel="preload" href="/assets/css/fonts.css" as="style">
-    <link rel="preload" href="/assets/icons/css/uicons-regular-rounded.css" as="style">
-    <link rel="preload" href="/assets/icons/fontawesome/css/all.min.css" as="style">
+    <link rel="preload" href="assets/css/main.css" as="style">
+    <link rel="preload" href="assets/css/style.css" as="style">
+    <link rel="preload" href="assets/css/preloader.css" as="style">
+    <link rel="preload" href="assets/css/fonts.css" as="style">
+    <link rel="preload" href="assets/icons/css/uicons-regular-rounded.css" as="style">
+    <link rel="preload" href="assets/icons/fontawesome/css/all.min.css" as="style">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/assets/css/preloader.css">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/icons/css/uicons-regular-rounded.css">
-    <link rel="stylesheet" href="/assets/icons/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href=assets/css/preloader.css">
+    <link rel="stylesheet" href=assets/css/main.css">
+    <link rel="stylesheet" href=assets/icons/css/uicons-regular-rounded.css">
+    <link rel="stylesheet" href=assets/icons/fontawesome/css/all.min.css">
 </head>
 <body class="dark">
     
@@ -47,7 +47,7 @@
 
         <!-- Header -->
         <header class="flex sticky align-center justify-between">
-            <img class="logo" src="/assets/img/logo.png" alt="Ubong Farms" width="70" height="40px">
+            <img class="logo" src="assets/img/logo.png" alt="Ubong Farms" width="70" height="40px">
             <div class="nav-links-container absolute">
                 <nav>
                     <ul class="flex flex-column">
@@ -186,7 +186,7 @@
 
                         <div class="relative  products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/18-400x490_70de85db-adc5-444b-94fb-6c9d5ed02706.png" alt="Carrots" width="100%" height="300">
+                                <img src="assets/img/18-400x490_70de85db-adc5-444b-94fb-6c9d5ed02706.png" alt="Carrots" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Carrots
                                 </a>
@@ -195,7 +195,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/chicken.png" alt="Chicken" width="100%" height="300">
+                                <img src="assets/img/chicken.png" alt="Chicken" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Chickens
                                 </a>
@@ -204,7 +204,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/vegetables.png" alt="Vegetables" width="100%" height="300">
+                                <img src="assets/img/vegetables.png" alt="Vegetables" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Vegetables
                                 </a>
@@ -213,7 +213,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/cows.png" alt="Cows" width="100%" height="300">
+                                <img src="assets/img/cows.png" alt="Cows" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Cows
                                 </a>
@@ -222,7 +222,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/Pig-Farming-in-Nigeria-e1454490658865.png" alt="Pigs" width="100%" height="300">
+                                <img src="assets/img/Pig-Farming-in-Nigeria-e1454490658865.png" alt="Pigs" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Pigs
                                 </a>
@@ -231,7 +231,7 @@
 
                         <div class="relative  products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/18-400x490_70de85db-adc5-444b-94fb-6c9d5ed02706.png" alt="Carrots" width="100%" height="300">
+                                <img src="assets/img/18-400x490_70de85db-adc5-444b-94fb-6c9d5ed02706.png" alt="Carrots" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Carrots
                                 </a>
@@ -240,7 +240,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/chicken.png" alt="Chicken" width="100%" height="300">
+                                <img src="assets/img/chicken.png" alt="Chicken" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Chickens
                                 </a>
@@ -249,7 +249,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/vegetables.png" alt="Vegetables" width="100%" height="300">
+                                <img src="assets/img/vegetables.png" alt="Vegetables" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Vegetables
                                 </a>
@@ -258,7 +258,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/cows.png" alt="Cows" width="100%" height="300">
+                                <img src="assets/img/cows.png" alt="Cows" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Cows
                                 </a>
@@ -267,7 +267,7 @@
 
                         <div class="relative products-box">
                             <div class="text-center relative">
-                                <img src="/assets/img/Pig-Farming-in-Nigeria-e1454490658865.png" alt="Pigs" width="100%" height="300">
+                                <img src="assets/img/Pig-Farming-in-Nigeria-e1454490658865.png" alt="Pigs" width="100%" height="300">
                                 <a class="product-link absolute" href="">
                                     Pigs
                                 </a>
@@ -289,7 +289,7 @@
                     <div class="featured-products grid align-center justify-between">
 
                         <div class="featured-products-box relative">
-                            <img src="/assets/img/cms_18_x381.jpg" alt="Featured Product" width="100%" height="300">
+                            <img src="assets/img/cms_18_x381.jpg" alt="Featured Product" width="100%" height="300">
                             <div class="products-desc text-center">
                                 <p class="star-green">
                                     <i class="fi fi-rr-star"></i>
@@ -321,7 +321,7 @@
                         </div>
 
                         <div class="featured-products-box relative">
-                            <img src="/assets/img/Pig-Farming-in-Nigeria-e1454490658865.png" alt="Featured Product" width="100%" height="300">
+                            <img src="assets/img/Pig-Farming-in-Nigeria-e1454490658865.png" alt="Featured Product" width="100%" height="300">
                             <div class="products-desc text-center">
                                 <p class="star-green">
                                     <i class="fi fi-rr-star"></i>
@@ -353,7 +353,7 @@
                         </div>
 
                         <div class="featured-products-box relative">
-                            <img src="/assets/img/cows.png" alt="Featured Product" width="100%" height="300">
+                            <img src="assets/img/cows.png" alt="Featured Product" width="100%" height="300">
                             <div class="products-desc text-center">
                                 <p class="star-green">
                                     <i class="fi fi-rr-star"></i>
@@ -385,7 +385,7 @@
                         </div>
 
                         <div class="featured-products-box relative">
-                            <img src="/assets/img/chicken.png" alt="Featured Product" width="100%" height="300">
+                            <img src="assets/img/chicken.png" alt="Featured Product" width="100%" height="300">
                             <div class="products-desc text-center">
                                 <p class="star-green">
                                     <i class="fi fi-rr-star"></i>
@@ -428,7 +428,7 @@
                 <div class="articles-container grid">
 
                     <article class="article">
-                        <img src="/assets/img/121321586_1131553057285912_4400022095194520660_n.jpg" alt="Article Picture" width="100%" height="300">
+                        <img src="assets/img/121321586_1131553057285912_4400022095194520660_n.jpg" alt="Article Picture" width="100%" height="300">
                         <p class="article-icon flex align-center">
                             <span>
                                 <i class="fi fi-rr-calendar relative"></i>
@@ -450,7 +450,7 @@
                     </article>
 
                      <article class="article">
-                        <img src="/assets/img/116674911_1073540043087214_8486089996287063446_n.jpg" alt="Article Picture" width="100%" height="300">
+                        <img src="assets/img/116674911_1073540043087214_8486089996287063446_n.jpg" alt="Article Picture" width="100%" height="300">
                         <p class="article-icon flex align-center">
                             <span>
                                 <i class="fi fi-rr-calendar relative"></i>
@@ -472,7 +472,7 @@
                     </article>
 
                      <article class="article">
-                        <img src="/assets/img/neelam-sundaram-ZXeySgbva-E-unsplash.jpg" alt="Article Picture" width="100%" height="300">
+                        <img src="assets/img/neelam-sundaram-ZXeySgbva-E-unsplash.jpg" alt="Article Picture" width="100%" height="300">
                         <p class="article-icon flex align-center">
                             <span>
                                 <i class="fi fi-rr-calendar relative"></i>
