--- a/farm/index.html
+++ b/farm/index.html
@@ -27,9 +27,9 @@
 <body class="dark">
     
     <!-- Preloader -->
-    <!-- <div class="preloader-container grid">
+    <div class="preloader-container grid">
         <div class="preloader round relative"></div>
-    </div> -->
+    </div>
 
     <div class="container">
 
@@ -582,8 +582,8 @@
     </div>
     
     <!--Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
 
     <!-- Script -->
     <script src="assets/js/main.js" defer></script>
