--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body class="dark">
     
     <!-- Preloader -->
-    <!-- <div class="preloader-container grid">
+    <div class="preloader-container grid">
         <div class="preloader round relative"></div>
-    </div> -->
+    </div>
 
     <div class="container">
 
