--- a/contact.html
+++ b/contact.html
@@ -11,26 +11,26 @@
     <link rel="icon" href="/assets/img/logo.png">
 
     <!-- Preload Styles -->
-    <link rel="preload" href="/assets/css/main.css" as="style">
-    <link rel="preload" href="/assets/css/style.css" as="style">
-    <link rel="preload" href="/assets/css/preloader.css" as="style">
-    <link rel="preload" href="/assets/css/fonts.css" as="style">
-    <link rel="preload" href="/assets/icons/css/uicons-regular-rounded.css" as="style">
-    <link rel="preload" href="/assets/icons/fontawesome/css/all.min.css" as="style">
-    <link rel="preload" href="/assets/js/ckeditor.js" as="style">
+    <link rel="preload" href="assets/css/main.css" as="style">
+    <link rel="preload" href="assets/css/style.css" as="style">
+    <link rel="preload" href="assets/css/preloader.css" as="style">
+    <link rel="preload" href="assets/css/fonts.css" as="style">
+    <link rel="preload" href="assets/icons/css/uicons-regular-rounded.css" as="style">
+    <link rel="preload" href="assets/icons/fontawesome/css/all.min.css" as="style">
+    <link rel="preload" href="assets/js/ckeditor.js" as="style">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/assets/css/preloader.css">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/icons/css/uicons-regular-rounded.css">
-    <link rel="stylesheet" href="/assets/icons/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/preloader.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/icons/css/uicons-regular-rounded.css">
+    <link rel="stylesheet" href="assets/icons/fontawesome/css/all.min.css">
 </head>
 <body>
     
     <!-- Preloader -->
-    <!-- <div class="preloader-container grid">
+    <div class="preloader-container grid">
         <div class="preloader round relative"></div>
-    </div> -->
+    </div>
     
     <div class="container">
         <div class="contact-container relative grid">
@@ -73,13 +73,13 @@
 
 
     <!--Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
 
     <!-- Script -->
     <script src="assets/js/main.js" defer></script>
 
-    <script src="/assets/js/ckeditor.js"></script>
+    <script src="assets/js/ckeditor.js"></script>
     <script>
         ClassicEditor
             .create( document.querySelector( '#message' ), {
