--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Wisdom Ojimah">
     <title>Modern Farm | Contact</title>
 
-    <link rel="icon" href="/assets/img/logo.png">
+    <link rel="icon" href="assets/img/logo.png">
 
     <!-- Preload Styles -->
     <link rel="preload" href="assets/css/main.css" as="style">
